--- a/metalreal/templates/admin/base.html
+++ b/metalreal/templates/admin/base.html
@@ -15,12 +15,12 @@
 				<div class="container">
 					<a href="#" class="brand" >Metalreal</a>
 					<ul class="nav" >
-						<li {{ unescape('class="active"') if 'chapter' in area.split('/') }} >
+						<li {{ unescape('class="active"') if 'chapter' in area }} >
 							<a href="{{ url_for('admin_index') }}" >Chapters</a>
 						</li>
-						<li {{ unescape('class="active"') if 'question' in area.split('/') }} ><a href="#" >Questions</a></li>
-						<li {{ unescape('class="active"') if 'quiz' in area.split('/') }} ><a href="#" >Quiz</a></li>
-						<li {{ unescape('class="active"') if 'feedback' in area.split('/') }} ><a href="#" >Feedback</a></li>
+						<li {{ unescape('class="active"') if 'question' in area }} ><a href="#" >Questions</a></li>
+						<li {{ unescape('class="active"') if 'quiz' in area }} ><a href="#" >Quiz</a></li>
+						<li {{ unescape('class="active"') if 'feedback' in area }} ><a href="#" >Feedback</a></li>
 					</ul >
 					<ul class="nav pull-right" >
 						<li><a href="{{ url_for('admin_logout') }}" >Logout</a></li>
@@ -32,6 +32,7 @@
 			<div id="side-bar" class="span3">
 				<ul class="nav nav-list well">
 					<li class="nav-header">Actions</li>
+					{% if 'chapter' in area %}
 					<li {{ unescape('class="active"') if area == 'chapter' }} >
 						<a href="{{ url_for('admin_index') }}">
 							<i class="icon-book"></i>
@@ -44,17 +45,28 @@
 							Create new chapter
 						</a>
 					</li>
+					{% elif area == 'question' %}
+
+					{% elif area == 'quiz' %}
+
+					{% elif area == 'feedback' %}
+
+					{% endif %}
 				</ul>
-				{% if area == 'chapter' %}
-				{% elif area == 'question' %}
-
-				{% elif area == 'quiz' %}
-
-				{% elif area == 'feedback' %}
-
-				{% endif %}
 			</div>
 			<div id="content" class="span9">
+				{% with messages = get_flashed_messages(with_categories=true) %}
+				  {% if messages %}
+				    <div class="flashes">
+				    {% for category, message in messages %}
+				      <div class="alert alert-{{ category }}">
+				      	<button class="close" data-dismiss="alert">×</button>
+				      	<strong>{{ message }}</strong>
+				      </div>
+				    {% endfor %}
+				    </div>
+				  {% endif %}
+				{% endwith %}
 				{% block content %}{% endblock %}
 			</div>
 		</div>
