--- a/metalreal/templates/admin/login.html
+++ b/metalreal/templates/admin/login.html
@@ -1,28 +1,34 @@
-{% extends "admin/base.html" %}
-
-{% block title %}Login{% endblock %}
-
-{% block navigation %}
-{% endblock %}
-{% block content %}
-<div class="login-form" >
-	<h1>Login</h1>
-	<form method="post" class="form-horizontal" >
-		<div class="control-group">
-			<label class="control-label" for="username" >Username</label>
-			<div class="controls" >
-				<input type="text" name="username" />
-			</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Login</title>
+	<script type="text/javascript" src="/static/js/jquery.min.js" ></script>
+	<script type="text/javascript" src="/static/bootstrap/js/bootstrap.js" ></script>
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css">
+</head>
+<body>
+	<div class="container" >
+		<div class="login-form" >
+			<legend>Login</legend>
+			<form method="post" class="form-horizontal" >
+				<div class="control-group">
+					<label class="control-label" for="username" >Username</label>
+					<div class="controls" >
+						<input type="text" name="username" />
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label" for="password" >Password</label>
+					<div class="controls" >
+						<input type="password" name="password" />
+					</div>
+				</div>
+				<div class="form-actions">
+					<button class="btn btn-primary btn-large" type="submit" >Login</button>
+				</div>
+			</form}>
 		</div>
-		<div class="control-group">
-			<label class="control-label" for="password" >Password</label>
-			<div class="controls" >
-				<input type="password" name="password" />
-			</div>
-		</div>
-		<div class="form-actions">
-			<button class="btn btn-primary btn-large" type="submit" >Login</button>
-		</div>
-	</form}>
-</div>
-{% endblock %}
+	</div>
+</body>
+</html>
