--- a/metalreal/templates/admin/base.html
+++ b/metalreal/templates/admin/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>{% block title %}{% endblock %}</title>
 	{% block head %}{% endblock %}
 	<script type="text/javascript" src="/static/js/jquery.min.js" ></script>
