Add become_rich which makes textarea a little richer features

--- a/metalreal/templates/admin/base.html
+++ b/metalreal/templates/admin/base.html
@@ -6,6 +6,7 @@
   {% block head %}{% endblock %}
   <script type="text/javascript" src="/static/js/jquery.min.js" ></script>
   <script type="text/javascript" src="/static/bootstrap/js/bootstrap.js" ></script>
+  <script type="text/javascript" src="/static/js/jquery.become_rich.js" ></script>
   <script type="text/javascript" src="/static/js/main_admin.js" ></script>
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
   <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css">
